Fe media assets (#27)
* draft fe media assets

* improve code and separate

* improve code and separate concercs wip

* headache

* asset integration

* coderrabbit

* bug

* fix tests

* queryFnOrSkip

* reuse getAssetsParams

* nits

* remove refecth

* safe

* remove accesbility comments from coderrabbit

* files per function

* nits

* pretty bytes fix

* add media using button base

* nit

* nits

* defensive

* nits

* cut repetition

* assert never

* add tsx
